# shopping-list

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  bors.toml  fly.toml  site  start-db.sh
.github/: dependabot.yml
.github/workflows/: cd.yml  ci-cd.yml  ci-cd.yml.bak  ci.yml  npm-test.yml  pr.yml  pr.yml.bak  rust.yml  test-npm.yml  test-rust.yml
db/migrations/: 01_create_open_items.sql
shopping-list-frontend/: Cargo.toml  README.md  package-lock.json  package.json
shopping-list-frontend/src/: App.test.tsx  App.tsx  BackendService.tsx  Types.tsx  main.rs  types.d.ts
shopping-list-frontend/src/components/: AddItem.tsx  CloseDoneItemsButton.tsx  DoneItem.tsx  DoneItemSection.tsx  DoneItems.tsx  Header.tsx  OpenDoneItemsButton.tsx  OpenItem.tsx  OpenItemSection.tsx
shopping-list-server/: Cargo.toml
shopping-list-server/src/: api.rs  cors.rs  db.rs  lib.rs  login.rs  main.rs  model.rs  oauth.rs  repo.rs
shopping-list-server/src/repo/: in_memory.rs  postgres.rs
