[package]
name = "shopping-list-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
eyre = "0.6"
futures = "0.3"
oauth2 = { version = "4", features = ["rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
